Added readme and screenshots

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<div id="game-screen">
 				<div id="info"></div>			
 				<div id="wave"></div>
-				<div id="b14e62657320818ce2d0b212239fc089fd8a87f4gameover" class="blink center-full-screen">GAME OVER</div>
+				<div id="gameover" class="blink center-full-screen">GAME OVER</div>
 				<div id="player-name" class="center-full-screen">
-					YOU RANKED #<span id="youranked"></span><br/><input id='playerName' value='ENTER YOUR NAME'/>
+					YOU RANKED #<span id="youranked"></span><br/><input id='playerName' placeholder='ENTER YOUR NAME'/>
 				</div>
 			</div>
 		</div>
